--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.2
   provider: ^4.3.3
-
+  custom_switch: ^0.0.1 
+  firebase_core: ^1.1.1
+  firebase_auth: ^1.1.4
+  cloud_firestore: ^2.1.0
+  firebase_crashlytics: ^2.0.3
+  firebase_messaging: ^9.1.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.3
 
 dev_dependencies:
   flutter_test:
