--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -25,6 +25,13 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
+
+	<key>NSAppTransportSecurity</key>
+	<dict>
+    <key>NSAllowsLocalNetworking</key>
+    <true/>
+	</dict>
+	
 	<string>Main</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
